Fix layout issues

--- a/main.css
+++ b/main.css
@@ -146,7 +146,10 @@ h1 {
 /* PROJECTS -------------------------------------------------------------- */
 
 .large-container {
-  margin: 2em 5em;
+  margin: 2% 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .large-card {
@@ -159,20 +162,20 @@ h1 {
 }
 
 .large-card-header {
-  padding: 20px;
+  padding: 3em;
   display: flex;
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
+  gap: 2em;
 }
 .large-card-header img {
-  width: 20%;
+  width: 30%;
   border-radius: 2px;
-  margin: 2em;
 }
 
 .large-card-body {
-  padding: 20px;
+  padding: 3em;
   display: none; /* Initially hidden */
 }
 .large-card-body img {
@@ -189,5 +192,7 @@ h1 {
   transform: scale(1.01); /* Optional: Slight scale effect on expand */
 }
 
-
+/* .toggle-indicator {
+  font-size: small;
+} */
   
